Add jtwig dependency

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.jtwig</groupId>
+      <artifactId>jtwig-core</artifactId>
+      <version>5.86.1.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>servlets</finalName>
